tests/NormalTests/paczka1/small_fuzzy/24706440.err
Error in line 1: jULupcE A847 66,5
Error in line 7: A713 A713 84,7
Error in line 9: lyYzc1aU A847 54,79
